MP2-418 fix wrong call configuration alignment

--- a/ems-ui/src/app/call/components/call-detail/call-detail.component.scss
+++ b/ems-ui/src/app/call/components/call-detail/call-detail.component.scss
@@ -1,6 +1,5 @@
 .container {
   max-width: 30rem;
-  float: left;
 }
 
 .field {
